WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
166530
[css-grid] Isolate instrinsic size computation from layout
https://bugs.webkit.org/show_bug.cgi?id=166530
Summary
[css-grid] Isolate instrinsic size computation from layout
Sergio Villar Senin
Reported
2016-12-28 06:12:24 PST
[css-grid] Isolate instrinsic size computation from layout
Attachments
Patch
(23.42 KB, patch)
2016-12-28 06:17 PST
,
Sergio Villar Senin
darin
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews112 for mac-elcapitan
(2.16 MB, application/zip)
2016-12-28 07:46 PST
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2016-12-28 06:17:59 PST
Created
attachment 297802
[details]
Patch
Build Bot
Comment 2
2016-12-28 07:46:54 PST
Comment on
attachment 297802
[details]
Patch
Attachment 297802
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/2798529
Number of test failures exceeded the failure limit.
Build Bot
Comment 3
2016-12-28 07:46:57 PST
Created
attachment 297808
[details]
Archive of layout-test-results from ews112 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Sergio Villar Senin
Comment 4
2016-12-30 02:54:56 PST
Committed
r210211
: <
http://trac.webkit.org/changeset/210211
>
Sergio Villar Senin
Comment 5
2016-12-30 03:00:07 PST
(In reply to
comment #3
)
> Created
attachment 297808
[details]
> Archive of layout-test-results from ews112 for mac-elcapitan > > The attached test failures were seen while running run-webkit-tests on the > mac-debug-ews. > Bot: ews112 Port: mac-elcapitan Platform: Mac OS X 10.11.6
This was caused by an oversight inside an ASSERT. I forgot to replace an instance of m_grid by grid in RenderGrid::numTracks(), that's why tests were hitting the assertion. It was properly fixed before landing.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug